--- a/portlet.css
+++ b/portlet.css
@@ -6,11 +6,104 @@
   text-align: center; 
 }
 
-.plugin-gridster.runstop .logo {
+
+.plugin-gridster.runstop .title_sarah {
+  position: absolute;
+  margin-top: -10px;
+  font-size: 15px; 
+  font-weight: bold;
+  margin-top: -10px;
+}
+.plugin-gridster.runstop .title_system {
+  position: absolute;
+  margin-top: 51px;
+  font-size: 15px; 
+  font-weight: bold;
+}
+
+  
+.plugin-gridster.runstop .info_sarah {
+  position: absolute;
+  margin-top: -9px;
+  margin-left: 50px;
+}
+.plugin-gridster.runstop .info_sarah .info_title {
+  color: #33A3EC; 
+}
+
+.plugin-gridster.runstop .info_system {
+  position: absolute;
+  margin-top: 52px;
+  margin-left: 50px;
+}
+.plugin-gridster.runstop .info_system .info_title {
+  color: #33A3EC; 
+}
+
+
+.plugin-gridster.runstop .logo_sarah {
   position: absolute;
   z-index:0;
-  left: 22px; 
-  width: 80%;
+  margin-top: -7px;
+  margin-left: 14px; 
+  opacity:0.5;
+}
+.plugin-gridster.runstop .logo_sarah .s_play img {
+  margin-left: -28px; 
+  width: 60px;
+}
+.plugin-gridster.runstop .logo_sarah .s_standby img {
+  margin-left: -28px; 
+  width: 60px;
+}
+.plugin-gridster.runstop .logo_sarah .s_restart img {
+  margin-left: 0px; 
+  width: 60px;
+}
+.plugin-gridster.runstop .logo_sarah .s_stop img {
+  margin-left: -22px; 
+  width: 70px;
+}
+.plugin-gridster.runstop .logo_sarah .s_status img {
+  margin-left: 80px; 
+  width: 40px;
+}
+
+
+.plugin-gridster.runstop .logo_system {
+  position: absolute;
+  z-index:0;
+  margin-top: 64px;
+  margin-left: 14px;  
+  opacity:0.5;
+}
+.plugin-gridster.runstop .logo_system .PC_Lock img {
+  margin-left: -28px; 
+  width: 56px;
+}
+.plugin-gridster.runstop .logo_system .PC_LogOff img {
+  margin-left: -18px; 
+  width: 56px;
+}
+.plugin-gridster.runstop .logo_system .PC_Sleep img {
+  margin-left: 0px; 
+  width: 56px;
+}
+.plugin-gridster.runstop .logo_system .PC_Hibernate img {
+  margin-left: -14px; 
+  width: 50px;
+}
+.plugin-gridster.runstop .logo_system .PC_Restart img {
+  margin-left: -2px; 
+  width: 60px;
+}
+.plugin-gridster.runstop .logo_system .PC_Restart_Force img {
+  margin-left: -20px; 
+  width: 60px;
+}
+.plugin-gridster.runstop .logo_system .PC_Stop img {
+  margin-left: -18px; 
+  width: 60px;
 }
 
 .plugin-gridster.runstop .logo2 {
